[tool.poetry]
name = "csvfiler"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
black = "^24.1.1"


[tool.poetry.scripts]
csvfiler = "csvfiler.main:cli"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
